PL/Projecto/tests/good/13.nx
foreach i in range(10) do
  print(i);
