PL/Projecto/tests/bad/12.nx
var x : bool = true;

foreach i in range(x) do print(i);
